tests/vendor/valid/trivial/not.c
//expect 243
//tags: trivial, unary
int main(void) {
    return ~12;
}