tests/vendor/invalid/syntax/keyword_wrong_case.c
//tags: trivial
int main(void) {
    RETURN 0;
}